src/scss/_variables.scss
// Variables
//
// Variables should follow the `$component-state-property-size` formula for
// consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.

// scss-docs-start color-variables
$blue: #84ace3;
$purple: #897ca2;
// scss-docs-end color-variables

// scss-docs-start colors-map
$colors: (
  "blue": $blue,
  "purple": $purple,
);
// scss-docs-end colors-map

// scss-docs-start theme-color-variables
$primary: $purple;
$secondary: $blue;

// scss-docs-start theme-colors-map
$theme-colors: (
  "primary": $purple,

  //added by me
  "myfooter": #f8f5ff,
  "color2-dark": #59516a,

  "mynav": #e1dfe3,

  "feed": #d4c2fb,
  "feed-bg": #fbfafe,
  "profile": #f5f1ff,
  "profile-bg": #efefef,
  "profile-btn": #b3a4cf,

  "activity": #e1dceb,
  "activity-bg": #8e86a1,
  "search": #8e86a1,
  "post": #d8d3e2,
  "post-bg": #f5f0ff,
  "feeling-bg": #e6daff,
  "sort-oul": #59516a,
  "sort-bg": #dddae5,
  "new-feature": #ace5fb,
  "new-feature-bg": #e3f9ff,

  "memory": #a788ec,
  "message": #a79fb9,
  "hug": #b899f5,
  "thought": #9a96a3,
  "nudge": #8772b4,

  //cards
  "send-checkin": #dddae5,
  "notifications": #faf8ff,
);
// scss-docs-end theme-colors-map

